fix spacing

--- a/src/views/_home/style.less
+++ b/src/views/_home/style.less
@@ -14,7 +14,7 @@ main {
   img {
     display: block;
     max-width: 100%;
-    margin: 2rem 0;
+    margin: 1.5rem 0;
   }
 
   .tag {
